--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.6",
     "bootstrap": "^5.3.2",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.5.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.5",
     "overlayscrollbars": "^2.4.6",
@@ -17,6 +17,7 @@
     "postcss-cli": "^9.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-modal-video": "^2.0.0",
